@@ -49,6 +49,9 @@ Other Changes:
   EndTable() was mistakenly restoring a wrong current table.
 - Disabled: fixed a bug when a previously enabled item that got nav focus
   and then turns disabled could still be activated using keyboard. (#9036)
+- InputText: when buffer is not resizable, trying to paste contents that
+  cannot fit will now truncate text to nearest UTF-8 codepoint boundaries,
+  instead of completely ignoring the paste. (#9029)
 - InputText: avoid continuously overwriting ownership of ImGuiKey_Enter/_KeypadEnter
   keys in order to allow e.g. external Shortcut override behavior. (#9004)
 - InputText: when using a callback to reduce/manipulate the value of BufTextLen,
